--- a/charts/thoras/templates/reasoning-api/deployment.yaml
+++ b/charts/thoras/templates/reasoning-api/deployment.yaml
@@ -54,6 +54,8 @@ spec:
             value: "{{ .Values.thorasReasoningApi.slackErrorsEnabled | default .Values.slackErrorsEnabled }}"
           - name: "LOGLEVEL"
             value: {{ default .Values.logLevel .Values.thorasReasoningApi.logLevel }}
+          - name: "PROMETHEUS_BASE_URL"
+            value: {{ .Values.thorasReasoningApi.connectors.prometheus.baseUrl }}
         ports:
         - containerPort: {{ .Values.thorasReasoningApi.containerPort }}
         resources:
