Add API_BASE_URL environment var to other deployments
Co-authored-by: Dylan Moradpour <dylan@thoras.ai>

--- a/charts/thoras/templates/api-server/deployment.yaml
+++ b/charts/thoras/templates/api-server/deployment.yaml
@@ -42,6 +42,8 @@ spec:
               secretKeyRef:
                 name: thoras-elastic-password
                 key: host
+          - name: API_BASE_URL
+            value: "http://thoras-api-server-v2"
           - name: SLACK_WEBHOOK_URL
             valueFrom:
               secretKeyRef:
