--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -98,6 +98,8 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+          - name: API_BASE_URL
+            value: "http://thoras-api-server-v2"
           - name: "ELASTICSEARCH_URL"
             valueFrom:
               secretKeyRef:
