Make helm unit tests more flexible with environment variable checks

--- a/charts/thoras/tests/reasoning_api_deployment_test.yaml
+++ b/charts/thoras/tests/reasoning_api_deployment_test.yaml
@@ -11,5 +11,5 @@ tests:
             baseUrl: "http://whats-good"
     asserts:
       - equal:
-          path: spec.template.spec.containers[0].env[4].value
+          path: $..spec.containers[0].env[?(@.name == 'PROMETHEUS_BASE_URL')].value
           value: "http://whats-good"
