--- a/charts/thoras/tests/secrets_test.yaml
+++ b/charts/thoras/tests/secrets_test.yaml
@@ -56,17 +56,17 @@ tests:
         enabled: true
     asserts:
       - equal:
-          path: spec.template.spec.containers[0].env[1].valueFrom.secretKeyRef.name
+          path: $..spec.containers[0].env[?(@.name =~ /SLACK_WEBHOOK_URL$/)].valueFrom.secretKeyRef.name
           value: "frou-frou"
       - equal:
-          path: spec.template.spec.containers[0].env[1].valueFrom.secretKeyRef.key
+          path: $..spec.containers[0].env[?(@.name =~ /SLACK_WEBHOOK_URL/)].valueFrom.secretKeyRef.key
           value: "url"
 
   - it: Points all apps to default slack secret, if no existing secret provided provided
     templates:
       - api-server/deployment.yaml
       - api-server-v2/deployment.yaml
-      # - collector/deployment.yaml
+      - collector/deployment.yaml
       - dashboard/deployment.yaml
       - monitor/deployment.yaml
       - operator/deployment.yaml
@@ -78,9 +78,9 @@ tests:
         enabled: true
     asserts:
       - equal:
-          path: spec.template.spec.containers[0].env[1].valueFrom.secretKeyRef.name
+          path: $..spec.containers[-1].env[?(@.name =~ /SLACK_WEBHOOK_URL$/)].valueFrom.secretKeyRef.name
           value: "thoras-slack"
       - equal:
-          path: spec.template.spec.containers[0].env[1].valueFrom.secretKeyRef.key
+          path: $..spec.containers[-1].env[?(@.name =~ /SLACK_WEBHOOK_URL$/)].valueFrom.secretKeyRef.key
           value: "webhookUrl"
 
