--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -35,6 +35,8 @@ slackWebhookUrlSecretRefName: ""
 slackWebhookUrlSecretRefKey: ""
 
 thorasOperator:
+  # Operator is a singleton -- don't change this :)
+  replicas: 1
   podAnnotations: {}
   limits:
     memory: 2000Mi
@@ -65,6 +67,7 @@ metricsCollector:
 
 thorasApiServer:
   containerPort: 8443
+  replicas: 1
   podAnnotations: {}
   limits:
     memory: 2000Mi
@@ -77,6 +80,7 @@ thorasApiServer:
 thorasApiServerV2:
   containerPort: 8080
   podAnnotations: {}
+  replicas: 1
   limits:
     memory: 2000Mi
   requests:
@@ -100,7 +104,7 @@ thorasDashboard:
     cpu: 100m
     memory: 100Mi
   port: 80
-  replicas: 3
+  replicas: 1
   service:
     type: ClusterIP
     annotations: {}
