Added rbac for v2 api
Co-authored-by: David Spigarelli <david@thoras.ai>

--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -27,7 +27,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
     spec:
-      serviceAccountName: thoras-collector
+      serviceAccountName: {{ .Values.thorasApiServerV2.serviceAccount.name }}
       volumes:
         - name: tls
           secret:
